Fixed worked /w Poojary

--- a/index.html
+++ b/index.html
@@ -501,10 +501,10 @@
                     <div class="row">
                         <div class="col-sm-12 media">
                             <div class="row">
-                                <div class="media-left">
-                                    <img class="media-object" style="width: 150px" src="img/cssalt.png" alt="UF" />
+                                <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 media-left">
+                                    <img class="media-object workex-img" style="width: 150px" src="img/cssalt.png" alt="UF" />
                                 </div> 
-                                <div class="media-body">
+                                <div class="col-xs-12 col-lg-10 col-md-10 col-md-10 col-sm-10 media">
                                     <h3 class="media-heading workex-text"><b>Center for Safety, Simulation & Advanced Learning Technologies</b></h3>
                                     <p class="lead workex-text">Simulation Developer</br>January 2016 - Present</p>
                                     <p class="lead workex-text">Actively involved in developing CSSALT's Mixed Rality Simulation Suite, building few of the best features like their Integrated Tutor.
@@ -512,12 +512,13 @@
                                 </div>
                             </div>
                         </div>
+                        <br>
                         <div class="col-md-12 media">
                             <div class="row">
-                                <div class="media-left">
-                                    <img height="150px" width="150px" src="img/pp.png" alt="UF" />
+                                <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 media-left"">
+                                    <img class="media-object workex-img" height="150px" width="150px" src="img/pp.png" alt="UF" />
                                 </div> 
-                                <div class="media-body">
+                                <div class="col-xs-12 col-lg-10 col-md-10 col-md-10 col-sm-10 media">
                                     <h3 class="media-heading workex-text"><b>Parsi Portal</b></h3>
                                     <p class="lead workex-text">Founder</br>July 2015 - Present</p>
                                     <p class="lead workex-text">Parsi portal is a global-scale service that serves the greater Zoroastrian comunity. The service provides a unique platform for
