😉 Smarter Resume box

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <div class="container">
             <div class="row">
                     <div class="col-xs-12">
-                        <h2>Oh, you might want this one...</h2>
+                        <h2>This website crammed crammed into one Letter-sized page...</h2>
                     </div>
                     <div class="col-sm-12">
                         <a href="files/Kaizad Avari - Resume.pdf" class="btn btn-light-padded" target="_blank">Resume</a>
