--- a/index.html
+++ b/index.html
@@ -439,6 +439,9 @@
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
+    <!-- Google Analytics -->
+    <script src="js/googAnalytics.js"></script>
+
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
