IoT, not Arduino

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                 <i class="fa fa-braille fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Arduino</strong>
+                                    <strong>IoT</strong>
                                 </h4>
                                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a> -->
