Updated meta description for SEO

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="My Personal Website.">
+    <meta name="description" content="Kaizad Avari's personal website. Here you can always find the most recent updates and Resume for Kaizad Avari.">
     <meta name="author" content="Kaizad Avari">
 
     <title>Kaizad Avari - Home</title>
