Point resume to repo

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         <h2>This website crammed crammed into one Letter-sized page...</h2>
                     </div>
                     <div class="col-sm-12">
-                        <a href="files/Kaizad Avari - Resume.pdf" class="btn btn-light-padded" target="_blank">Resume</a>
+                        <a href="https://github.com/itskaizad/Resume/raw/master/Kaizad%20Avari%20-%20Resume.pdf" class="btn btn-light-padded" target="_blank">Resume</a>
                     </div>
             </div>
         </div>
