Update message typo

--- a/index.html
+++ b/index.html
@@ -333,13 +333,12 @@
         <!-- /.container -->
     </section>
 
-
     <!-- Resume -->
     <section id="resume" class="resume">
         <div class="container">
             <div class="row">
                     <div class="col-xs-12">
-                        <h2>This website crammed crammed into one Letter-sized page...</h2>
+                        <h2>This website crammed into one Letter-sized page...</h2>
                     </div>
                     <div class="col-sm-12">
                         <a href="https://github.com/itskaizad/Resume/raw/master/Kaizad%20Avari%20-%20Resume.pdf" class="btn btn-light-padded" target="_blank">Resume</a>
