--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>Hello</h2>
                     <p class="lead">I'm a backend engineer at Blackrock. I build large-scale
-                        distributed systems that are joy to use!
+                        distributed systems that are a joy to use!
                     </p>
                 </div>
             </div>
